Améliorations d'interface et corrections d'erreur sur l'ajout simplifie

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -214,7 +214,7 @@
                                     {% flag "ajout_convention" %}
                                         <div>
                                             <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary fr-mr-2w" href="{% url 'conventions:from_operation_select' %}">
-                                                Ajouter une convention existante dans le SIAP / Apilos
+                                                Ajouter une convention dans le SIAP / Apilos
                                             </a>
                                         </div>
                                     {% endflag %}
