--- a/templates/conventions/from_operation/select_operation.html
+++ b/templates/conventions/from_operation/select_operation.html
@@ -7,7 +7,7 @@
 {% block content %}
 
     <div class="fr-container fr-my-5w">
-        <h3>Ajouter une convention existante</h3>
+        <h1>Ajouter une convention</h1>
 
         {% include "./stepper.html"%}
 
@@ -18,8 +18,8 @@
                     <div class="select-label">Numéro de l'opération</div>
                     <input class="fr-input fr-mt-1w" type="search" id="numero_operation" name="numero_operation" value="{{ request.GET.numero_operation }}" placeholder="Rechercher"/>
                 </div>
-                <div class="fr-col-12 fr-col-lg-6 fr-grid-row fr-grid-row--right">
-                    <button class="fr-btn fr-mt-3w" id="search_btn">
+                <div class="fr-col-12 fr-col-lg-6">
+                    <button class="fr-btn fr-btn--primary fr-mt-4w" id="search_btn">
                         <span class="fr-icon-search-line fr-mr-1w" aria-hidden="true"></span>
                         Rechercher
                     </button>
