--- a/templates/conventions/from_operation/stepper.html
+++ b/templates/conventions/from_operation/stepper.html
@@ -3,7 +3,7 @@
     <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-stepper fr-col-md-12">
             <h2 class="fr-stepper__title">
-                {{form_step.current_step.title}}
+                {{form_step.current_step}}
                 <span class="fr-stepper__state">Étape {{form_step.number}} sur {{form_step.total}}</span>
             </h2>
             <div class="fr-stepper__steps" data-fr-current-step="{{form_step.number}}" data-fr-steps="{{form_step.total}}"></div>
@@ -12,7 +12,7 @@
                     <div class="fr-col-6">
                         <p class="fr-stepper__details">
                             <span class="fr-text--bold">Etape suivante : </span>
-                            {{form_step.next_step.title}}
+                            {{form_step.next_step}}
                         </p>
                     </div>
                 </div>
