Ajout simplifié via créer une convention (#1336)
* Rename new_convention to new_convention_anru

* Add convention choice page

* Improve link to ajout simplifie

--- a/templates/conventions/_partial/create_action.html
+++ b/templates/conventions/_partial/create_action.html
@@ -1,6 +1,6 @@
 <div class="fr-mr-3w">
-    <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary" href="{% url 'conventions:new_convention' %}">
-        Créer une convention ANRU
+    <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary" href="{% url 'conventions:new_convention_choice' %}">
+        Créer une convention
     </a>
 </div>
 <div>
