Remove excessive border bottom on hover

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -733,6 +733,7 @@ table.fullwidth {
 .fr-table--bordered tbody tr:hover {
   background-color: white;
   transform: scale(1.02);
+  background-size: 98% 1px;
 }
 
 .apilos-link {
