--- a/templates/conventions/from_operation/add_avenants.html
+++ b/templates/conventions/from_operation/add_avenants.html
@@ -31,7 +31,7 @@
                         <tr class="th_inline">
                             <th scope="col">Statut</th>
                             <th scope="col">Numéro de l'avenant</th>
-                            <th scope="col">Date de l'avenant</th>
+                            <th scope="col">Année de signature de l'avenant</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -43,10 +43,12 @@
                                         {% include "conventions/home/statut_tag.html" with convention=avenant %}
                                     </div>
                                 </td>
-                                <td>{{ avenant.numero|default_if_none:"" }}</td>
-                                <td>{{ avenant.televersement_convention_signee_le}}</td>
+                                <td>{{ avenant.numero|default_if_none:"-" }}</td>
+                                <td>{{ avenant.televersement_convention_signee_le.year }}</td>
                                 <td>
-                                    <span class="fr-icon-eye-line" aria-hidden="true"></span>
+                                    <div class="fr-grid-row fr-grid-row--center">
+                                        <span class="fr-icon-eye-line" aria-hidden="true"></span>
+                                    </div>
                                 </td>
                             </tr>
                             <script type="text/javascript" nonce="{{request.csp_nonce}}">
