--- a/templates/conventions/from_operation/add_avenants.html
+++ b/templates/conventions/from_operation/add_avenants.html
@@ -24,15 +24,44 @@
         </div>
 
         {% if avenants %}
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-8">
-                    <h6>Avenants associés à cette convention</h6>
-                    <ul>
+            <div class="fr-table fr-table--bordered fr-table--layout-fixed apilos-text--black fr-mt-2w">
+                <table>
+                    <caption class="fr-text--sm fr-text--regular">Avenant(s) associé(s) à cette opération</caption>
+                    <thead>
+                        <tr class="th_inline">
+                            <th scope="col">Statut</th>
+                            <th scope="col">Numéro de l'avenant</th>
+                            <th scope="col">Année de signature de l'avenant</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
                         {% for avenant in avenants %}
-                            <li>Avenant {{ avenant.numero }} : {{ avenant }}</li>
+                            <tr class="clickable" id="convention_redirect_{{avenant.uuid}}">
+                                <td>
+                                    <div class="fr-pr-2w">
+                                        {% include "conventions/home/statut_tag.html" with convention=avenant %}
+                                    </div>
+                                </td>
+                                <td>{{ avenant.numero|default_if_none:"-" }}</td>
+                                <td>{{ avenant.televersement_convention_signee_le.year }}</td>
+                                <td>
+                                    <div class="fr-grid-row fr-grid-row--center">
+                                        <span class="fr-icon-eye-line" aria-hidden="true"></span>
+                                    </div>
+                                </td>
+                            </tr>
+                            <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                document.addEventListener('DOMContentLoaded', function () {
+                                    document.getElementById('convention_redirect_{{avenant.uuid}}').addEventListener('click', function(){
+                                        const url = "{% url 'conventions:post_action' convention_uuid=avenant.uuid %}";
+                                        window.open(url, "_blank");
+                                    })
+                                });
+                            </script>
                         {% endfor %}
-                    </ul>
-                </div>
+                    </tbody>
+                </table>
             </div>
         {% endif %}
 
