--- a/templates/conventions/from_operation/select_operation_list.html
+++ b/templates/conventions/from_operation/select_operation_list.html
@@ -59,7 +59,7 @@
                         <div class="fr-grid-row fr-grid-row--gutters" >
                             {% if siap_assistance_url %}
                                 <div class="">
-                                    <a class="fr-btn fr-icon-mail-line fr-btn--icon-left fr-btn--tertiary" href="{{ siap_assistance_url }}">
+                                    <a class="fr-btn fr-icon-mail-line fr-btn--icon-left fr-btn--tertiary apilos-no-dsfr-target" href="{{ siap_assistance_url }}" target="_blank" rel="noopener">
                                         Contactez l'assistance
                                     </a>
                                 </div>
@@ -87,7 +87,7 @@
                     <div class="fr-grid-row fr-grid-row--gutters" >
                         {% if siap_assistance_url %}
                             <div class="">
-                                <a class="fr-btn fr-icon-mail-line fr-btn--icon-left fr-btn--tertiary" href="{{ siap_assistance_url }}">
+                                <a class="fr-btn fr-icon-mail-line fr-btn--icon-left fr-btn--tertiary apilos-no-dsfr-target" href="{{ siap_assistance_url }}" target="_blank" rel="noopener">
                                     Contactez l'assistance
                                 </a>
                             </div>
@@ -102,7 +102,7 @@
     {% else %}
         <p class="fr-mt-10w fr-mb-2w">Vous n'avez pas le numéro de l'opération ?</p>
         {% if siap_assistance_url %}
-            <a class="fr-btn fr-icon-mail-line fr-btn--icon-left fr-btn--tertiary" href="{{ siap_assistance_url }}">
+            <a class="fr-btn fr-icon-mail-line fr-btn--icon-left fr-btn--tertiary apilos-no-dsfr-target" href="{{ siap_assistance_url }}" target="_blank" rel="noopener">
                 Contactez l'assistance
             </a>
         {% endif %}
