--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -21,7 +21,7 @@
                         </p>
                     </div>
                     {% if form_step.total != form_step.number %}
-                        <div class="fr-col-6 apilos-stepper-align-right">
+                        <div class="fr-col-6 apilos-align-right">
                             <p class="fr-stepper__details">
                                 <a href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">Récapitulatif</a>
                             </p>
