--- a/templates/conventions/from_operation/add_convention.html
+++ b/templates/conventions/from_operation/add_convention.html
@@ -17,7 +17,7 @@
     <div class="fr-container fr-my-5w">
         <h1>Ajouter une convention</h1>
 
-        {% include "./stepper.html"%}
+        {% include "../common/stepper.html"%}
 
         {% if operation is None %}
 
