--- a/templates/conventions/from_operation/add_avenants.html
+++ b/templates/conventions/from_operation/add_avenants.html
@@ -17,7 +17,7 @@
     <div class="fr-container fr-my-5w">
         <h1>Ajouter une convention</h1>
 
-        {% include "./stepper.html"%}
+        {% include "../common/stepper.html"%}
 
         <div class="fr-alert fr-alert--success">
             <p>La convention {{ convention }} a bien été ajoutée dans Apilos !</p>
