--- a/templates/conventions/from_operation/select_operation.html
+++ b/templates/conventions/from_operation/select_operation.html
@@ -9,7 +9,7 @@
     <div class="fr-container fr-my-5w">
         <h1>Ajouter une convention</h1>
 
-        {% include "./stepper.html"%}
+        {% include "../common/stepper.html"%}
 
         <h6>Quelle opération est liée à cette convention ?</h6>
         <form class="fr-mt-2w" method="get" action="" id="search_table">
