Step 2 UI and bootstrap step 3

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1112,3 +1112,7 @@ table .apilos-badge {
 .apilos-link-background {
   background-color:#f4f6ff;
 }
+.apilos-fit-content-centered {
+  width: fit-content;
+  margin: auto;
+}
