--- a/templates/conventions/finalisation/cerfa.html
+++ b/templates/conventions/finalisation/cerfa.html
@@ -6,6 +6,82 @@
         <h1>Finaliser la convention</h1>
 
         {% include "../common/stepper.html"%}
-        FINALISATION ETAPE 2
+        <p>Vous pouvez relire la convention avant qu'elle ne soit envoyée pour signature.</p>
+
+        <form method="post" action="{% url 'conventions:generate' convention_uuid=convention.uuid %}" data-turbo="false" class="fr-mb-7w">
+            {% csrf_token %}
+            <button class="fr-btn fr-btn--primary fr-icon-download-line fr-btn--icon-left">
+                Télécharger le CERFA de la convention
+            </button>
+        </form>
+
+        <p class="fr-text--light">Si nécessaire, vous pouvez effectuer des modifications et remplacer ce document par une nouvelle version.</p>
+
+        <form method="post" data-turbo="false">
+            {% csrf_token %}
+            <div class="fr-accordions-group">
+                <section class="fr-accordion">
+                    <h3 class="fr-accordion__title">
+                        <button class="fr-accordion__btn" aria-expanded="false" aria-controls="accordion-114" type="button">Mode expert : remplacer le document CERFA</button>
+                    </h3>
+                    <div class="fr-collapse" id="accordion-114">
+                        <div class="fr-alert fr-alert--error fr-mb-5w">
+                            <p>Si vous modifiez des éléments de contenu, mettez bien à jour le formulaire de la convention pour garantir la cohérence des données</p>
+                        </div>
+                        <input id="file-upload-lock" type="hidden" name="Upload" value="true" disabled="disabled" />
+                        <input
+                            class="fileinput--hidden"
+                            type="file"
+                            id="file-upload-input"
+
+                            name="file"
+                            accept="application/vnd.openxmlformats-officedocument.wordprocessingm"
+                        />
+
+                        <button
+                            class="fr-btn fr-btn--secondary fr-icon-upload-line fr-btn--icon-left auto-upload-btn"
+                            type="button"
+                            data-input="file-upload-input"
+                            data-lock="file-upload-lock"
+                        >
+                            Déposer un nouveau CERFA et remplacer la version actuelle
+                        </button>
+                    </div>
+                </section>
+            </div>
+            <div class="apilos-align-right fr-mt-3w">
+                <button class="fr-btn">
+                    Enregistrer et étape suivante
+                </button>
+            </div>
+        </form>
     </div>
+{% endblock %}
+
+{% block js %}
+    <script type="text/javascript" nonce="{{request.csp_nonce}}">
+        document.addEventListener('DOMContentLoaded', function () {
+            // Handler auto upload buttons
+            for (let button of document.getElementsByClassName('auto-upload-btn')) {
+
+                const input = document.getElementById(button.getAttribute('data-input'));
+                const lock = document.getElementById(button.getAttribute('data-lock'));
+
+                if (input) {
+                    button.onclick = function () {
+                        // Enable related hidden input as lock
+                        if (lock) {
+                            lock.removeAttribute('disabled');
+                        }
+                        // Trigger file selection popup
+                        input.click();
+                    }
+
+                    // input.onchange = function () {
+                    //     this.form.submit();
+                    // }
+                }
+            }
+        });
+    </script>
 {% endblock %}
