--- a/templates/conventions/finalisation/numero.html
+++ b/templates/conventions/finalisation/numero.html
@@ -11,7 +11,7 @@
                 <form method="post" action="{% url 'conventions:finalisation_numero' convention_uuid=convention.uuid %}">
                     {% csrf_token %}
                     <div class="fr-col-6">
-                        {% include "common/form/input_text.html" with form_input=form.numero editable=True %}
+                        {% include "common/form/input_text.html" with form_input=form.numero editable=True object_field="convention_numero__"|add:form.uuid.value%}
                     </div>
                     <div class="apilos-align-right fr-mt-3w">
                         <button class="fr-btn">
