--- a/templates/conventions/finalisation/validation.html
+++ b/templates/conventions/finalisation/validation.html
@@ -7,21 +7,21 @@
 
         {% include "../common/stepper.html"%}
         <div class="fr-grid-row">
-            <div class="fr-col-8">
+            <div class="fr-col-8 fr-pt-3w">
                 <p>La convention est prête à être transmise au bailleur pour signature !</p>
                 <button class="fr-btn fr-btn--primary">
                     Valider et envoyer la convention pour signature
                 </button>
             </div>
-            <div class="fr-col-4 fr-notice fr-notice--info">
+            <div class="fr-col-4 fr-notice fr-notice--info fr-py-4w fr-px-2w">
                 <div class="apilos-fit-content-centered">
-                    <form method="post" action="{% url 'conventions:generate' convention_uuid=convention.uuid %}" data-turbo="false">
+                    <form method="post" action="{% url 'conventions:get_or_generate_cerfa' convention_uuid=convention.uuid %}" data-turbo="false">
                         {% csrf_token %}
-                        <button class="fr-btn fr-btn--secondary fr-icon-download-line fr-btn--icon-left">
+                        <button class="fr-btn fr-btn--secondary fr-icon-download-line fr-btn--icon-left fr-mb-2w">
                             Document CERFA de la convention
                         </button>
                     </form>
-                    <a class="fr-link" href="#">Récapitulatif du formulaire</a>
+                    <a class="fr-link" target="_self" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">Récapitulatif du formulaire</a>
                 </div>
             </div>
         </div>
