--- a/templates/conventions/finalisation/validation.html
+++ b/templates/conventions/finalisation/validation.html
@@ -9,9 +9,13 @@
         <div class="fr-grid-row">
             <div class="fr-col-8 fr-pt-3w">
                 <p>La convention est prête à être transmise au bailleur pour signature !</p>
-                <button class="fr-btn fr-btn--primary">
-                    Valider et envoyer la convention pour signature
-                </button>
+                <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
+                    {% csrf_token %}
+                    <input id="finalisationform" type="hidden" name="finalisationform" value="true" disabled="disabled" />
+                    <button class="fr-btn">
+                        Valider et envoyer la convention pour signature
+                    </button>
+                </form>
             </div>
             <div class="fr-col-4 fr-notice fr-notice--info fr-py-4w fr-px-2w">
                 <div class="apilos-fit-content-centered">
