--- a/templates/settings/edit_user.html
+++ b/templates/settings/edit_user.html
@@ -24,33 +24,20 @@
                         <h3>Modification de l'utilisateur « {{ form.username.value }} »</h3>
                         <form method="post" action="">
                             {% csrf_token %}
-                            {% include "common/form/input_text.html" with form_input=form.email %}
-                            {% include "common/form/input_text.html" with form_input=form.username editable=False %}
-                            {% include "common/form/input_text.html" with form_input=form.first_name %}
-                            {% include "common/form/input_text.html" with form_input=form.last_name %}
-                            {% include "common/form/input_telephone.html" with form_input=form.telephone %}
-                            {% if user.is_bailleur %}
-                                {% include "common/form/input_multiselect.html" with form_input=form.filtre_departements label_class="fr-h4" %}
-                            {% endif %}
-
 
                             {% include "settings/form/email_preferences.html" with user=user form_input=form.preferences_email %}
-                            {% if request.user.is_superuser %}
-                                <h4>Rôles spéciaux</h4>
-                            {% else %}
-                                <h4>Rôle spécial</h4>
-                            {% endif %}
+
+                            <h4>Rôle spécial</h4>
                             {% include "common/form/input_checkbox.html" with form_input=form.administrateur_de_compte editable=request.user.is_administrator %}
-                            {% if request.user.is_superuser %}
-                                {% include "common/form/input_checkbox.html" with form_input=form.is_superuser %}
-                            {% endif %}
+
                             <button class="fr-btn fr-icon-save-line fr-btn--icon-left fr-mt-3w" type="submit">
                                 Enregistrer
                             </button>
                         </form>
                     </div>
 
-                    {% if not user.is_superuser %}
+                    {% if not user.is_superuser or not user.is_staff %}
+
                         {% if user.is_bailleur %}
                             <div class='fr-col-12 fr-mt-3w'>
                                 <div class="fr-table fr-table--bordered table--layout-fixed">
@@ -136,9 +123,8 @@
                         {% endif %}
                     {% endif %}
 
-                    {% if not user.is_instructeur and not user.is_bailleur and request.user.is_superuser %}
+                    {% if not user.is_instructeur and not user.is_bailleur and is_staff_or_admin %}
                         <div class="fr-mt-3w">
-                            {% comment %} ???? {% endcomment %}
                             {% include 'settings/add_administration_to_user.html' %}
                             {% include 'settings/add_bailleur_to_user.html' %}
                         </div>
