Link recapitulatif in new tab (step 3)

--- a/templates/conventions/finalisation/validation.html
+++ b/templates/conventions/finalisation/validation.html
@@ -25,7 +25,7 @@
                             Document CERFA de la convention
                         </button>
                     </form>
-                    <a class="fr-link" target="_self" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">Récapitulatif du formulaire</a>
+                    <a class="fr-link apilos-no-dsfr-target" target="_blank" rel="noopener" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">Récapitulatif du formulaire</a>
                 </div>
             </div>
         </div>
